--- a/Part0_Intro.ipynb
+++ b/Part0_Intro.ipynb
@@ -20,8 +20,8 @@
     "\n",
     "| #       |              Name |             Id |             email                   |\n",
     "|---------|-------------------|----------------|------------------------------------ |\n",
-    "|Student 1|  [yotam rotelman] | [206267825]    | [yotam.rot@campus.technion.ac.il]   |\n",
-    "|Student 2|  [Sagi Lizbona]   | [205926363]    | [sagilizbona@campus.technion.ac.il] |"
+    "|Student 1|  [name] | [id]    | [email]   |\n",
+    "|Student 2|  [name]   | [id]    | [email] |"
    ]
   },
   {
